Regression(268215@main): imported/w3c/web-platform-tests/css/css-transitions/changing-while-transition-001.html is flakily crashing https://bugs.webkit.org/show_bug.cgi?id=261886

Unreviewed partial revert of 268215@main to address crashes on the bots.

* Source/WebCore/animation/DeclarativeAnimation.cpp:
(WebCore::DeclarativeAnimation::owningElement const):
(WebCore::DeclarativeAnimation::initialize):
(WebCore::DeclarativeAnimation::shouldFireDOMEvents const):
* Source/WebCore/animation/DeclarativeAnimation.h:

Canonical link: https://commits.webkit.org/268260@main